--- a/.github/workflows/fetch-image.yml
+++ b/.github/workflows/fetch-image.yml
@@ -48,17 +48,18 @@ jobs:
 
           OUTPUT="["
 
+          # Loop through GitHub images
           for row in $(echo "$GITHUB_IMAGES" | jq -c '.[]'); do
               IMAGE_NAME=$(echo "$row" | jq -r '.name')
               
-              # Fetch the tags associated with each image
+              # Fetch tags associated with each image
               GITHUB_TAGS=$(curl -s -L \
                 -H "Accept: application/vnd.github+json" \
                 -H "Authorization: Bearer $TOKEN" \
                 -H "X-GitHub-Api-Version: 2022-11-28" \
                 "https://api.github.com/users/$GITHUB_REPO/packages/container/$IMAGE_NAME/versions")
 
-              # Debug the structure of the response
+              # Debug the structure of the response to ensure correct data
               echo "GitHub API response for $IMAGE_NAME:"
               echo "$GITHUB_TAGS" | jq .
 
@@ -70,8 +71,9 @@ jobs:
                   continue
               fi
 
-              # Process each tag
+              # Process each tag and compare with Kubernetes deployed images
               for tag in $GITHUB_TAGS; do
+                  echo "Processing image $IMAGE_NAME with tag $tag"
                   if echo "$DEPLOYED_IMAGES" | grep -q "$IMAGE_NAME:$tag"; then
                       STATUS="Deployed"
                   else
@@ -84,12 +86,19 @@ jobs:
           OUTPUT="${OUTPUT%,}]"
           echo "$OUTPUT" > output.json
           echo "Comparison complete, output written to output.json"
+          cat output.json  # Display output to debug
 
       # Step 5: Delete Unused Images
       - name: Delete Unused Images
         run: |
           echo "Deleting unused images..."
           FINAL_IMAGES=$(cat output.json)
+
+          # Check if output.json has data
+          if [ -z "$FINAL_IMAGES" ]; then
+            echo "No images to process for deletion."
+            exit 0
+          fi
 
           DELETE_IMAGES=()
           for row in $(echo "$FINAL_IMAGES" | jq -c '.[]'); do
@@ -102,7 +111,10 @@ jobs:
               fi
           done
 
-          # Image deletion logic
+          # Log images that will be deleted
+          echo "Images to be deleted: ${DELETE_IMAGES[@]}"
+
+          # Image deletion logic (Delete images in GitHub)
           for img in "${DELETE_IMAGES[@]}"; do
               echo "Deleting image: $img"
               curl -X DELETE -H "Authorization: Bearer $TOKEN" \
