--- a/.github/workflows/fetch-image.yml
+++ b/.github/workflows/fetch-image.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install jq
-        run: sudo apt-get install jq  # Ensure jq is installed
+        run: sudo yum install jq  # Ensure jq is installed
 
       - name: Run fetch-images script
         run: |
