--- a/.github/workflows/fetch-image.yml
+++ b/.github/workflows/fetch-image.yml
@@ -14,9 +14,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Install jq
-        run: sudo yum install jq  # Ensure jq is installed
-
       - name: Run fetch-images script
         run: |
           # Define GitHub repository and token
@@ -29,8 +26,11 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer $TOKEN" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/users/$GITHUB_REPO/packages?package_type=container" \
-            | jq -r '.[] | {image: .name, url: .html_url}')
+            "https://api.github.com/users/$GITHUB_REPO/packages?package_type=container")
+
+          # Extract image names and URLs
+          IMAGE_NAMES=$(echo "$IMAGES" | grep -oP '"name":\s*"\K[^"]+')
+          IMAGE_URLS=$(echo "$IMAGES" | grep -oP '"html_url":\s*"\K[^"]+')
 
           # Fetch deployed tags in Kubernetes
           echo "Fetching deployed tags from Kubernetes..."
@@ -39,14 +39,13 @@ jobs:
 
           # Prepare JSON data for visualization
           OUTPUT="["
-          for row in $(echo "$IMAGES" | jq -c '.'); do
-              IMAGE_NAME=$(echo "$row" | jq -r '.image')
+          paste <(echo "$IMAGE_NAMES") <(echo "$IMAGE_URLS") | while IFS=$'\t' read -r IMAGE_NAME IMAGE_URL; do
               GITHUB_TAGS=$(curl -s -L \
                 -H "Accept: application/vnd.github+json" \
                 -H "Authorization: Bearer $TOKEN" \
                 -H "X-GitHub-Api-Version: 2022-11-28" \
                 "https://api.github.com/users/$GITHUB_REPO/packages/container/$IMAGE_NAME/versions" \
-                | jq -r '.[0].metadata.container.tags[]')
+                | grep -oP '"tags":\s*\[\K[^\]]+' | tr ',' '\n' | tr -d '"')
 
               # Check if tags are available
               if [[ -z "$GITHUB_TAGS" ]]; then
