--- a/.github/workflows/fetch-image.yml
+++ b/.github/workflows/fetch-image.yml
@@ -48,7 +48,7 @@ jobs:
             -H "Authorization: Bearer $TOKEN" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             "https://api.github.com/users/$GITHUB_REPO/packages?package_type=container" \
-            | grep -oP '"name":\s*"\K[^"]+')
+            | jq -r '.[].name')
 
           # Process each image
           for IMAGE_NAME in $IMAGES; do
@@ -60,7 +60,7 @@ jobs:
               -H "Authorization: Bearer $TOKEN" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               "https://api.github.com/users/$GITHUB_REPO/packages/container/$IMAGE_NAME/versions" \
-              | grep -oP '"id":\s*\K\d+')
+              | jq -r '.[] | "\(.id) \(.metadata.container.tags[0]) \(.created_at)"' | sort -k3)
 
             # Fetch Kubernetes deployed tags (with full image name)
             K8S_TAGS=$(kubectl get pods --all-namespaces -o=jsonpath='{.items[*].spec.containers[*].image}' | tr ' ' '\n' | grep -E "^ghcr.io/$GITHUB_REPO/$IMAGE_NAME:")
@@ -74,21 +74,14 @@ jobs:
             draw_box $BOX_WIDTH
             printf "| %-75s |\n" "Image: $IMAGE_NAME"
             draw_box $BOX_WIDTH
-            printf "| %-22s | %-22s |\n" "GitHub Tag" "K8s Deployed?"
+            printf "| %-22s | %-22s | %-22s |\n" "GitHub Tag" "K8s Deployed?" "Push Date"
             draw_box $BOX_WIDTH
 
-            while read -r version_id; do
-              tag=$(curl -s -L \
-                -H "Accept: application/vnd.github+json" \
-                -H "Authorization: Bearer $TOKEN" \
-                -H "X-GitHub-Api-Version: 2022-11-28" \
-                "https://api.github.com/users/$GITHUB_REPO/packages/container/$IMAGE_NAME/versions/$version_id" \
-                | grep -oP '"tags":\s*\[\K[^\]]+' | tr ',' '\n' | tr -d '"')
-
+            while read -r version_id tag created_at; do
               if echo "$K8S_TAGS" | grep -qE "^ghcr.io/$GITHUB_REPO/$IMAGE_NAME:$tag$"; then
-                printf "| %-22s | %-22s |\n" "$tag" "Yes"
+                printf "| %-22s | %-22s | %-22s |\n" "$tag" "Yes" "$created_at"
               else
-                printf "| %-22s | %-22s |\n" "$tag" "No"
+                printf "| %-22s | %-22s | %-22s |\n" "$tag" "No" "$created_at"
               fi
             done <<< "$IMAGE_VERSIONS"
 
@@ -104,7 +97,7 @@ jobs:
               echo ""
 
               # Delete old versions if they are not deployed in Kubernetes
-              echo "$IMAGE_VERSIONS" | head -n $DELETE_COUNT | while read -r version_id; do
+              echo "$IMAGE_VERSIONS" | head -n $DELETE_COUNT | while read -r version_id tag created_at; do
                 if ! echo "$K8S_TAGS" | grep -qE "^ghcr.io/$GITHUB_REPO/$IMAGE_NAME:$tag$"; then
                   delete_image_version "$IMAGE_NAME" "$version_id"
                 else
