--- a/.github/workflows/fetch-image.yml
+++ b/.github/workflows/fetch-image.yml
@@ -14,19 +14,63 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Run fetch-images script
+      - name: Fetch container images from GitHub
         run: |
           # Define GitHub repository and token
           GITHUB_REPO="mishragulshan999"
           TOKEN="${{ secrets.GH_ACCESS_TOKEN }}"  # Access your custom secret 'GH_ACCESS_TOKEN'
 
-          # Function to draw a box
-          draw_box() {
-            local width=$1
-            printf "%0.s-" $(seq 1 $width)
-            echo ""
-          }
+          # Fetch the list of all container images from GitHub
+          IMAGES=$(curl -s -L \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer $TOKEN" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            "https://api.github.com/users/$GITHUB_REPO/packages?package_type=container" \
+            | jq -r '.[].name')
 
+          echo "Fetched images from GitHub: $IMAGES"
+          echo "$IMAGES" > images.txt
+
+      - name: Fetch Kubernetes deployed tags
+        run: |
+          # Fetch Kubernetes deployed tags (with full image name)
+          K8S_TAGS=$(kubectl get pods --all-namespaces -o=jsonpath='{.items[*].spec.containers[*].image}' | tr ' ' '\n')
+
+          echo "Fetched Kubernetes tags: $K8S_TAGS"
+          echo "$K8S_TAGS" > k8s_tags.txt
+
+      - name: Compare GitHub and Kubernetes images
+        run: |
+          # Compare GitHub versions with Kubernetes deployed tags
+          echo "Comparing GitHub images with Kubernetes deployed images..."
+          while read -r IMAGE_NAME; do
+            echo "Processing image: $IMAGE_NAME"
+
+            # Fetch versions from GitHub
+            IMAGE_VERSIONS=$(curl -s -L \
+              -H "Accept: application/vnd.github+json" \
+              -H "Authorization: Bearer $TOKEN" \
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              "https://api.github.com/users/$GITHUB_REPO/packages/container/$IMAGE_NAME/versions" \
+              | jq -r '.[] | "\(.id) \(.metadata.container.tags[0]) \(.created_at)"' | sort -k3)
+
+            # Fetch Kubernetes deployed tags
+            K8S_TAGS=$(kubectl get pods --all-namespaces -o=jsonpath='{.items[*].spec.containers[*].image}' | tr ' ' '\n' | grep -E "^ghcr.io/$GITHUB_REPO/$IMAGE_NAME:")
+
+            # Print comparison table
+            echo "Image: $IMAGE_NAME"
+            echo "GitHub Tag - K8s Deployed? - Push Date"
+            echo "$IMAGE_VERSIONS" | while read -r version_id tag created_at; do
+              if echo "$K8S_TAGS" | grep -qE "^ghcr.io/$GITHUB_REPO/$IMAGE_NAME:$tag$"; then
+                echo "$tag - Yes - $created_at"
+              else
+                echo "$tag - No - $created_at"
+              fi
+            done
+          done < images.txt
+
+      - name: Delete old image versions
+        run: |
           # Function to delete an image version
           delete_image_version() {
             local image_name=$1
@@ -42,17 +86,9 @@ jobs:
             echo "Deleted version ID: $version_id"
           }
 
-          # Fetch the list of all container images from GitHub
-          IMAGES=$(curl -s -L \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer $TOKEN" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            "https://api.github.com/users/$GITHUB_REPO/packages?package_type=container" \
-            | jq -r '.[].name')
-
-          # Process each image
-          for IMAGE_NAME in $IMAGES; do
-            echo "Processing image: $IMAGE_NAME"
+          # Process each image to delete old versions
+          while read -r IMAGE_NAME; do
+            echo "Processing image for deletion: $IMAGE_NAME"
 
             # Fetch versions from GitHub
             IMAGE_VERSIONS=$(curl -s -L \
@@ -62,31 +98,8 @@ jobs:
               "https://api.github.com/users/$GITHUB_REPO/packages/container/$IMAGE_NAME/versions" \
               | jq -r '.[] | "\(.id) \(.metadata.container.tags[0]) \(.created_at)"' | sort -k3)
 
-            # Fetch Kubernetes deployed tags (with full image name)
+            # Fetch Kubernetes deployed tags
             K8S_TAGS=$(kubectl get pods --all-namespaces -o=jsonpath='{.items[*].spec.containers[*].image}' | tr ' ' '\n' | grep -E "^ghcr.io/$GITHUB_REPO/$IMAGE_NAME:")
-
-            # Debugging: Show what tags are fetched from Kubernetes
-            echo "Fetched Kubernetes tags: $K8S_TAGS"
-            echo "Fetched GitHub versions: $IMAGE_VERSIONS"
-
-            # Print comparison table
-            BOX_WIDTH=80
-            draw_box $BOX_WIDTH
-            printf "| %-75s |\n" "Image: $IMAGE_NAME"
-            draw_box $BOX_WIDTH
-            printf "| %-22s | %-22s | %-22s |\n" "GitHub Tag" "K8s Deployed?" "Push Date"
-            draw_box $BOX_WIDTH
-
-            while read -r version_id tag created_at; do
-              if echo "$K8S_TAGS" | grep -qE "^ghcr.io/$GITHUB_REPO/$IMAGE_NAME:$tag$"; then
-                printf "| %-22s | %-22s | %-22s |\n" "$tag" "Yes" "$created_at"
-              else
-                printf "| %-22s | %-22s | %-22s |\n" "$tag" "No" "$created_at"
-              fi
-            done <<< "$IMAGE_VERSIONS"
-
-            draw_box $BOX_WIDTH
-            echo ""
 
             # Extract IDs and tags
             TOTAL_VERSIONS=$(echo "$IMAGE_VERSIONS" | wc -l)
@@ -107,6 +120,4 @@ jobs:
             else
               echo "No old images to delete for $IMAGE_NAME."
             fi
-
-            echo ""
-          done
+          done < images.txt
