--- a/.github/workflows/fetch-image.yml
+++ b/.github/workflows/fetch-image.yml
@@ -14,7 +14,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Fetch container images from GitHub
+      - name: Fetch GitHub Images
+        id: fetch_images
         run: |
           # Define GitHub repository and token
           GITHUB_REPO="mishragulshan999"
@@ -28,22 +29,35 @@ jobs:
             "https://api.github.com/users/$GITHUB_REPO/packages?package_type=container" \
             | jq -r '.[].name')
 
-          echo "Fetched images from GitHub: $IMAGES"
-          echo "$IMAGES" > images.txt
+          echo "Fetched Images: $IMAGES"
+          echo "::set-output name=images::$IMAGES"
 
-      - name: Fetch Kubernetes deployed tags
+      - name: Fetch Kubernetes Deployed Tags
+        id: fetch_k8s_tags
         run: |
           # Fetch Kubernetes deployed tags (with full image name)
-          K8S_TAGS=$(kubectl get pods --all-namespaces -o=jsonpath='{.items[*].spec.containers[*].image}' | tr ' ' '\n')
-
+          K8S_TAGS=$(kubectl get pods --all-namespaces -o=jsonpath='{.items[*].spec.containers[*].image}' | tr ' ' '\n' | grep -E "^ghcr.io/$GITHUB_REPO/")
           echo "Fetched Kubernetes tags: $K8S_TAGS"
-          echo "$K8S_TAGS" > k8s_tags.txt
+          echo "::set-output name=k8s_tags::$K8S_TAGS"
 
-      - name: Compare GitHub and Kubernetes images
+      - name: Process Image Comparison
+        id: process_comparison
         run: |
-          # Compare GitHub versions with Kubernetes deployed tags
-          echo "Comparing GitHub images with Kubernetes deployed images..."
-          while read -r IMAGE_NAME; do
+          # Get the fetched images and Kubernetes tags from previous steps
+          IMAGES="${{ steps.fetch_images.outputs.images }}"
+          K8S_TAGS="${{ steps.fetch_k8s_tags.outputs.k8s_tags }}"
+          
+          echo "Processing Image Comparison..."
+
+          # Function to draw a box
+          draw_box() {
+            local width=$1
+            printf "%0.s-" $(seq 1 $width)
+            echo ""
+          }
+
+          # Loop through images for comparison
+          for IMAGE_NAME in $IMAGES; do
             echo "Processing image: $IMAGE_NAME"
 
             # Fetch versions from GitHub
@@ -54,43 +68,41 @@ jobs:
               "https://api.github.com/users/$GITHUB_REPO/packages/container/$IMAGE_NAME/versions" \
               | jq -r '.[] | "\(.id) \(.metadata.container.tags[0]) \(.created_at)"' | sort -k3)
 
-            # Fetch Kubernetes deployed tags
-            K8S_TAGS=$(kubectl get pods --all-namespaces -o=jsonpath='{.items[*].spec.containers[*].image}' | tr ' ' '\n' | grep -E "^ghcr.io/$GITHUB_REPO/$IMAGE_NAME:")
+            # Debugging: Show what tags are fetched from Kubernetes
+            echo "Fetched GitHub versions: $IMAGE_VERSIONS"
 
             # Print comparison table
-            echo "Image: $IMAGE_NAME"
-            echo "GitHub Tag - K8s Deployed? - Push Date"
-            echo "$IMAGE_VERSIONS" | while read -r version_id tag created_at; do
+            BOX_WIDTH=80
+            draw_box $BOX_WIDTH
+            printf "| %-75s |\n" "Image: $IMAGE_NAME"
+            draw_box $BOX_WIDTH
+            printf "| %-22s | %-22s | %-22s |\n" "GitHub Tag" "K8s Deployed?" "Push Date"
+            draw_box $BOX_WIDTH
+
+            while read -r version_id tag created_at; do
               if echo "$K8S_TAGS" | grep -qE "^ghcr.io/$GITHUB_REPO/$IMAGE_NAME:$tag$"; then
-                echo "$tag - Yes - $created_at"
+                printf "| %-22s | %-22s | %-22s |\n" "$tag" "Yes" "$created_at"
               else
-                echo "$tag - No - $created_at"
+                printf "| %-22s | %-22s | %-22s |\n" "$tag" "No" "$created_at"
               fi
-            done
-          done < images.txt
+            done <<< "$IMAGE_VERSIONS"
 
-      - name: Delete old image versions
+            draw_box $BOX_WIDTH
+            echo ""
+
+          done
+
+      - name: Delete Old Image Versions
+        id: delete_images
         run: |
-          # Function to delete an image version
-          delete_image_version() {
-            local image_name=$1
-            local version_id=$2
-            echo "Deleting image version: $image_name - ID: $version_id"
+          # Get the fetched images and Kubernetes tags from previous steps
+          IMAGES="${{ steps.fetch_images.outputs.images }}"
+          K8S_TAGS="${{ steps.fetch_k8s_tags.outputs.k8s_tags }}"
+          
+          echo "Processing Image Deletion..."
 
-            curl -L -X DELETE \
-              -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer $TOKEN" \
-              -H "X-GitHub-Api-Version: 2022-11-28" \
-              "https://api.github.com/users/$GITHUB_REPO/packages/container/$image_name/versions/$version_id"
-
-            echo "Deleted version ID: $version_id"
-          }
-
-          # Process each image to delete old versions
-          while read -r IMAGE_NAME; do
-            echo "Processing image for deletion: $IMAGE_NAME"
-
-            # Fetch versions from GitHub
+          # Extract IDs and tags and delete old versions
+          for IMAGE_NAME in $IMAGES; do
             IMAGE_VERSIONS=$(curl -s -L \
               -H "Accept: application/vnd.github+json" \
               -H "Authorization: Bearer $TOKEN" \
@@ -98,21 +110,23 @@ jobs:
               "https://api.github.com/users/$GITHUB_REPO/packages/container/$IMAGE_NAME/versions" \
               | jq -r '.[] | "\(.id) \(.metadata.container.tags[0]) \(.created_at)"' | sort -k3)
 
-            # Fetch Kubernetes deployed tags
-            K8S_TAGS=$(kubectl get pods --all-namespaces -o=jsonpath='{.items[*].spec.containers[*].image}' | tr ' ' '\n' | grep -E "^ghcr.io/$GITHUB_REPO/$IMAGE_NAME:")
-
             # Extract IDs and tags
             TOTAL_VERSIONS=$(echo "$IMAGE_VERSIONS" | wc -l)
             DELETE_COUNT=$((TOTAL_VERSIONS - 5))
 
             if [[ $DELETE_COUNT -gt 0 ]]; then
               echo "Deleting $DELETE_COUNT old versions for $IMAGE_NAME..."
-              echo ""
 
               # Delete old versions if they are not deployed in Kubernetes
               echo "$IMAGE_VERSIONS" | head -n $DELETE_COUNT | while read -r version_id tag created_at; do
                 if ! echo "$K8S_TAGS" | grep -qE "^ghcr.io/$GITHUB_REPO/$IMAGE_NAME:$tag$"; then
-                  delete_image_version "$IMAGE_NAME" "$version_id"
+                  # Delete image version
+                  curl -L -X DELETE \
+                    -H "Accept: application/vnd.github+json" \
+                    -H "Authorization: Bearer $TOKEN" \
+                    -H "X-GitHub-Api-Version: 2022-11-28" \
+                    "https://api.github.com/users/$GITHUB_REPO/packages/container/$IMAGE_NAME/versions/$version_id"
+                  echo "Deleted version ID: $version_id"
                 else
                   echo "Skipping deletion of deployed image: $tag"
                 fi
@@ -120,4 +134,4 @@ jobs:
             else
               echo "No old images to delete for $IMAGE_NAME."
             fi
-          done < images.txt
+          done
