--- a/.github/workflows/fetch-image.yml
+++ b/.github/workflows/fetch-image.yml
@@ -14,13 +14,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Fetch GitHub Images
-        id: fetch_images
+      - name: Define GitHub repository and token
         run: |
-          # Define GitHub repository and token
           GITHUB_REPO="mishragulshan999"
           TOKEN="${{ secrets.GH_ACCESS_TOKEN }}"  # Access your custom secret 'GH_ACCESS_TOKEN'
+          echo "GitHub Repository: $GITHUB_REPO"
 
+      - name: Fetch list of container images from GitHub
+        run: |
           # Fetch the list of all container images from GitHub
           IMAGES=$(curl -s -L \
             -H "Accept: application/vnd.github+json" \
@@ -28,38 +29,13 @@ jobs:
             -H "X-GitHub-Api-Version: 2022-11-28" \
             "https://api.github.com/users/$GITHUB_REPO/packages?package_type=container" \
             | jq -r '.[].name')
+          echo "Images fetched: $IMAGES"
 
-          echo "Fetched Images: $IMAGES"
-          echo "::set-output name=images::$IMAGES"
-
-      - name: Fetch Kubernetes Deployed Tags
-        id: fetch_k8s_tags
+      - name: Process each image
         run: |
-          # Fetch Kubernetes deployed tags (with full image name)
-          K8S_TAGS=$(kubectl get pods --all-namespaces -o=jsonpath='{.items[*].spec.containers[*].image}' | tr ' ' '\n' | grep -E "^ghcr.io/$GITHUB_REPO/")
-          echo "Fetched Kubernetes tags: $K8S_TAGS"
-          echo "::set-output name=k8s_tags::$K8S_TAGS"
-
-      - name: Process Image Comparison
-        id: process_comparison
-        run: |
-          # Get the fetched images and Kubernetes tags from previous steps
-          IMAGES="${{ steps.fetch_images.outputs.images }}"
-          K8S_TAGS="${{ steps.fetch_k8s_tags.outputs.k8s_tags }}"
-          
-          echo "Processing Image Comparison..."
-
-          # Function to draw a box
-          draw_box() {
-            local width=$1
-            printf "%0.s-" $(seq 1 $width)
-            echo ""
-          }
-
-          # Loop through images for comparison
           for IMAGE_NAME in $IMAGES; do
             echo "Processing image: $IMAGE_NAME"
-
+            
             # Fetch versions from GitHub
             IMAGE_VERSIONS=$(curl -s -L \
               -H "Accept: application/vnd.github+json" \
@@ -68,11 +44,21 @@ jobs:
               "https://api.github.com/users/$GITHUB_REPO/packages/container/$IMAGE_NAME/versions" \
               | jq -r '.[] | "\(.id) \(.metadata.container.tags[0]) \(.created_at)"' | sort -k3)
 
-            # Debugging: Show what tags are fetched from Kubernetes
-            echo "Fetched GitHub versions: $IMAGE_VERSIONS"
+            # Fetch Kubernetes deployed tags (with full image name)
+            K8S_TAGS=$(kubectl get pods --all-namespaces -o=jsonpath='{.items[*].spec.containers[*].image}' | tr ' ' '\n' | grep -E "^ghcr.io/$GITHUB_REPO/$IMAGE_NAME:")
 
-            # Print comparison table
-            BOX_WIDTH=80
+            # Debugging: Show what tags are fetched from Kubernetes
+            echo "Fetched Kubernetes tags: $K8S_TAGS"
+            echo "Fetched GitHub versions: $IMAGE_VERSIONS"
+          done
+
+      - name: Compare GitHub and Kubernetes tags
+        run: |
+          BOX_WIDTH=80
+          # Print comparison table for each image
+          for IMAGE_NAME in $IMAGES; do
+            echo "Comparing image: $IMAGE_NAME"
+            
             draw_box $BOX_WIDTH
             printf "| %-75s |\n" "Image: $IMAGE_NAME"
             draw_box $BOX_WIDTH
@@ -89,44 +75,23 @@ jobs:
 
             draw_box $BOX_WIDTH
             echo ""
-
           done
 
-      - name: Delete Old Image Versions
-        id: delete_images
+      - name: Delete old versions (if necessary)
         run: |
-          # Get the fetched images and Kubernetes tags from previous steps
-          IMAGES="${{ steps.fetch_images.outputs.images }}"
-          K8S_TAGS="${{ steps.fetch_k8s_tags.outputs.k8s_tags }}"
-          
-          echo "Processing Image Deletion..."
-
-          # Extract IDs and tags and delete old versions
           for IMAGE_NAME in $IMAGES; do
-            IMAGE_VERSIONS=$(curl -s -L \
-              -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer $TOKEN" \
-              -H "X-GitHub-Api-Version: 2022-11-28" \
-              "https://api.github.com/users/$GITHUB_REPO/packages/container/$IMAGE_NAME/versions" \
-              | jq -r '.[] | "\(.id) \(.metadata.container.tags[0]) \(.created_at)"' | sort -k3)
-
             # Extract IDs and tags
             TOTAL_VERSIONS=$(echo "$IMAGE_VERSIONS" | wc -l)
             DELETE_COUNT=$((TOTAL_VERSIONS - 5))
 
             if [[ $DELETE_COUNT -gt 0 ]]; then
               echo "Deleting $DELETE_COUNT old versions for $IMAGE_NAME..."
+              echo ""
 
               # Delete old versions if they are not deployed in Kubernetes
               echo "$IMAGE_VERSIONS" | head -n $DELETE_COUNT | while read -r version_id tag created_at; do
                 if ! echo "$K8S_TAGS" | grep -qE "^ghcr.io/$GITHUB_REPO/$IMAGE_NAME:$tag$"; then
-                  # Delete image version
-                  curl -L -X DELETE \
-                    -H "Accept: application/vnd.github+json" \
-                    -H "Authorization: Bearer $TOKEN" \
-                    -H "X-GitHub-Api-Version: 2022-11-28" \
-                    "https://api.github.com/users/$GITHUB_REPO/packages/container/$IMAGE_NAME/versions/$version_id"
-                  echo "Deleted version ID: $version_id"
+                  delete_image_version "$IMAGE_NAM" "$version_id"
                 else
                   echo "Skipping deletion of deployed image: $tag"
                 fi
