--- a/.github/workflows/fetch-image.yml
+++ b/.github/workflows/fetch-image.yml
@@ -14,13 +14,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Define GitHub repository and token
+      - name: Run fetch-images script
         run: |
+          # Define GitHub repository and token
           GITHUB_REPO="mishragulshan999"
           TOKEN="${{ secrets.GH_ACCESS_TOKEN }}"  # Access your custom secret 'GH_ACCESS_TOKEN'
 
-      - name: Function to draw a box
-        run: |
           # Function to draw a box
           draw_box() {
             local width=$1
@@ -28,8 +27,21 @@ jobs:
             echo ""
           }
 
-      - name: Fetch list of container images from GitHub
-        run: |
+          # Function to delete an image version
+          delete_image_version() {
+            local image_name=$1
+            local version_id=$2
+            echo "Deleting image version: $image_name - ID: $version_id"
+
+            curl -L -X DELETE \
+              -H "Accept: application/vnd.github+json" \
+              -H "Authorization: Bearer $TOKEN" \
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              "https://api.github.com/users/$GITHUB_REPO/packages/container/$image_name/versions/$version_id"
+
+            echo "Deleted version ID: $version_id"
+          }
+
           # Fetch the list of all container images from GitHub
           IMAGES=$(curl -s -L \
             -H "Accept: application/vnd.github+json" \
@@ -38,13 +50,7 @@ jobs:
             "https://api.github.com/users/$GITHUB_REPO/packages?package_type=container" \
             | jq -r '.[].name')
 
-          echo "IMAGES=$IMAGES" >> $GITHUB_ENV  # Store images into GitHub environment variable
-
-      - name: Fetch and process each image
-        run: |
-          # Fetch each image from GitHub and process it
-          IMAGES="${{ env.IMAGES }}"
-
+          # Process each image
           for IMAGE_NAME in $IMAGES; do
             echo "Processing image: $IMAGE_NAME"
 
@@ -62,16 +68,9 @@ jobs:
             # Debugging: Show what tags are fetched from Kubernetes
             echo "Fetched Kubernetes tags: $K8S_TAGS"
             echo "Fetched GitHub versions: $IMAGE_VERSIONS"
-          done
 
-      - name: Compare GitHub and Kubernetes tags
-        run: |
-          # Print comparison table for each image
-          BOX_WIDTH=80
-          for IMAGE_NAME in $IMAGES; do
-            echo "Comparing image: $IMAGE_NAME"
-
-            # Function to draw box (repeating the function code)
+            # Print comparison table
+            BOX_WIDTH=80
             draw_box $BOX_WIDTH
             printf "| %-75s |\n" "Image: $IMAGE_NAME"
             draw_box $BOX_WIDTH
@@ -88,26 +87,7 @@ jobs:
 
             draw_box $BOX_WIDTH
             echo ""
-          done
 
-      - name: Delete old versions (if necessary)
-        run: |
-          # Function to delete image version
-          delete_image_version() {
-            local image_name=$1
-            local version_id=$2
-            echo "Deleting image version: $image_name - ID: $version_id"
-
-            curl -L -X DELETE \
-              -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer $TOKEN" \
-              -H "X-GitHub-Api-Version: 2022-11-28" \
-              "https://api.github.com/users/$GITHUB_REPO/packages/container/$image_name/versions/$version_id"
-
-            echo "Deleted version ID: $version_id"
-          }
-
-          for IMAGE_NAME in $IMAGES; do
             # Extract IDs and tags
             TOTAL_VERSIONS=$(echo "$IMAGE_VERSIONS" | wc -l)
             DELETE_COUNT=$((TOTAL_VERSIONS - 5))
@@ -127,4 +107,6 @@ jobs:
             else
               echo "No old images to delete for $IMAGE_NAME."
             fi
+
+            echo ""
           done
